tests/NormalTests/paczka1/fuzzy1/21514773.err
Error in line 6: GL1 A453 88,6
Error in line 4: EQQ A453 16,6
Error in line 10: EQQ A100 70,8
Error in line 14: GL1 S49 54,8
Error in line 16: GL1 A689 95,7
Error in line 15: EQQ A689 27,7
Error in line 21: EQQ S49 57,3
Error in line 27: EQQ A453 14,0
